# Final2x-core

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  __init__.py  __main__.py  config.yaml  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI-build.yml  CI-test.yml  PIP-test.yml  Release-pypi.yml  Release.yml  pip-test.yml
Final2x_core/: Final2x-core-pip.md
scripts/: CItestpip.py  download_models.py  gen_config.py  post_pyinstaller.py
src/: SR.py  SRqueue.py
src/Final2x_core/: __init__.py  __main__.py  download_models.py
src/Final2x_core/SRFactory/: SRBaseClass.py  SRFactory.py  SRMD.py  __init__.py
src/Final2x_core/SRncnn/: REALCUGANncnn.py  REALESRGANncnn.py  SRMDncnn.py
src/Final2x_core/models/: README.md  download_models.py
src/Final2x_core/src/: SRqueue.py
src/Final2x_core/src/SRFactory/: REALCUGAN.py  REALESRGAN.py  SRBaseClass.py  SRFactory.py  WAIFU2X.py  __init__.py
src/Final2x_core/src/SRncnn/: REALCUGANncnn.py  REALESRGANncnn.py  WAIFU2Xncnn.py
src/Final2x_core/src/utils/: getConfig.py  progressLog.py  singleton.py
src/Final2x_core/utils/: getConfig.py
src/SRFactory/: REALCUGAN.py  REALESRGAN.py  SRBaseClass.py  SRFactory.py  SRMD.py  WAIFU2X.py  __init__.py
src/SRncnn/: REALCUGANncnn.py  REALESRGANncnn.py  SRMDncnn.py  WAIFU2Xncnn.py
src/utils/: getConfig.py  progressLog.py  singleton.py
test/: test_SR_Class.py  test_baseclass.py  test_getconfig.py  test_getsr.py  test_realcugan.py  test_realesrgan.py  test_requirements.txt  test_singleton.py  test_srqueue.py  test_targetscale.py  util.py
tests/: CIsetconfig.py  CItestpip.py  test_baseclass.py  test_getconfig.py  test_getsr.py  test_progresslog.py  test_realcugan.py  test_realesrgan.py  test_requirements.txt  test_singleton.py  test_srmd.py  test_srqueue.py  test_targetscale.py  test_waifu2x.py  util.py
